  * Moloch >= 1.6.0 requires NodeJS 8.x, 8.12 or later
  * Moloch >= 1.0.0 requires NodeJS 8.x
  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading

2.4.2 2020/10/xx
  - NOTE - this is the last version to support ES 6
  - viewer - support utf8 chars in content-disposition
  - capture - QUIC version 5x detection

2.4.1 2020/09/28
  - NOTICE - db.pl upgrade is required
  - NOTICE - the elasticsearch and usersElasticsearch variables must start with http:// or https://
  - release - node 12.18.4
  - viewer - fixed export pcap from actions menu not working
  - viewer - capture stats/graph now uses regex instead of wildcard
  - viewer - support -reindex indices
  - viewer - log more info when can't open a file
  - viewer - lastpass boxes removed
  - viewer - can now edit ILM values from ES Admin tab if ./db.pl ilm has been used previously
  - viewer - handle hunts with bad regex better
  - viewer - change capture stats default length to 200
  - viewer - fix password change with aes256Encryption turned on
  - viewer - handle hunts when nodes are down better
  - wise - UI improvements
  - wise - theatstream mode sqlite3 no longer copies the db, use sqlite3-copy for old behaviour
  - parliament - show bits instead of bytes
  - db - new reindex command
  - capture - http2 header fields were not always indexed correctly
  - capture - fix g_hash_table_contains warning
  - capture - rules can use special ip values ipv4 and ipv6 now
  - moloch_update_geo.sh - fix possible security issue


2.4.0 2020/08/25
  - NOTE - RHEL/Centos 6 is no longer supported, Node 12 required
  - NOTE - New encoding of packetPos, set gapPacketPos=false for old encoding
  - NOTE - 2.4.x will be the last versions to support ES 6
  - release - node 12.18.2, glib 2.64.5, curl 7.72.0
  - release - Ubuntu 20 support
  - viewer - aes256Encryption now defaults to true
  - viewer - added a clear cache button to ES Admin tab